gcc/testsuite/gdc.test/runnable/issue8671.d
// RUNNABLE_PHOBOS_TEST
import std.random;
void main()
{
    double t = 1.0 - uniform(0.0, 1.0);
}
